# alphafold3-pytorch

./: .gitmodules  README.md  pyproject.toml
docker/: docker_run_bash_jax.sh
src/alphafold3_torch/torch/attention/: attention.py
